hack/swarm/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: quant_route 
            virtual_hosts:
            - name: quant 
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/evolution/quant"
                route:
                  cluster: quant 
              - match:
                  prefix: "/evolution/engine"
                route:
                  cluster: engine 
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: quant
    connect_timeout: 0.5s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: quant-backend
        port_value: 8080
  - name: engine 
    connect_timeout: 0.5s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: quant-engine
        port_value: 6666
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081
